--- a/src/sass/components/_home.scss
+++ b/src/sass/components/_home.scss
@@ -1,7 +1,7 @@
 .container {
   max-width: 320px;
   margin: 0 auto;
-  background-color: $white;
+  background-color: none;
 }
 .films-gallery-home {
   display: flex;
